Some button added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="py-4">
-
+        <button class="btn btn-success">Some Button</button>
     </header>
     <main>
 
